--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <div class="container">
   <div class="row">
     <nav class="navbar">
-      <input class="form-control" type="text" name="search">
+      <input class="form-control" type="text" name="search" [(ngModel)]="filter">
     </nav>
     <table class="table">
       <thead>
@@ -19,7 +19,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let game of games; let i = index">
+        <tr *ngFor="let game of games | filter:filter; let i = index">
           <td>{{i}}</td>
           <td>{{game.name}}</td>
           <td>{{game.genre}}</td>
